<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>it.fantasyarena</groupId>
    <artifactId>fantasy-arena</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <exec.mainClass>it.fantasyarena.Main</exec.mainClass>
        <fantasy.combat.system.version>1.0-SNAPSHOT</fantasy.combat.system.version>
        <junit.jupiter.version>5.11.4</junit.jupiter.version>
    </properties>

    <dependencies>
        <!-- Il motore di combattimento: regole, formule e battaglia NvN. Progetto separato. -->
        <dependency>
            <groupId>it.fantasycombatsystem</groupId>
            <artifactId>fantasy-combat-system</artifactId>
            <version>${fantasy.combat.system.version}</version>
        </dependency>
        <!--
            Il test support del motore (CombatFixtures, StubDiceRoller): serve ai test dei
            renderer, che costruiscono Fighter deterministici.
        -->
        <dependency>
            <groupId>it.fantasycombatsystem</groupId>
            <artifactId>fantasy-combat-system</artifactId>
            <version>${fantasy.combat.system.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <!-- Generazione di personaggi, armi e armature: dichiarata esplicitamente, non per transitivita'. -->
        <dependency>
            <groupId>it.fantasytoolkit</groupId>
            <artifactId>fantasytoolkit</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Esegue i test JUnit 5 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <!-- mvn exec:java per lanciare la classe Main -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.5.0</version>
                    <configuration>
                        <mainClass>${exec.mainClass}</mainClass>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
